--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -26,3 +26,12 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Circular';
+  src: url('~assets/fonts/circular/CircularStd-Black.eot?#iefix') format('embedded-opentype'),  url('~assets/fonts/circular/CircularStd-Black.otf')  format('opentype'),
+	     url('~assets/fonts/circular/CircularStd-Black.woff') format('woff'), url('~assets/fonts/circular/CircularStd-Black.ttf')  format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
