--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,1 +1,6 @@
-$red: rgb(204, 51, 51);
+$dark-red: rgba(204, 51, 51, 1);
+$light-red: rgba(231, 51, 51, 1);
+
+$dark-red-hide: rgba(204, 51, 51, 0);
+$light-red-hide: rgba(231, 51, 51, 0);
+
