--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -4,3 +4,5 @@ $light-red: rgba(231, 51, 51, 1);
 $dark-red-hide: rgba(204, 51, 51, 0);
 $light-red-hide: rgba(231, 51, 51, 0);
 
+$loader-color: rgb(70, 60, 60)
+
