--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -4,5 +4,9 @@ $light-red: rgba(231, 51, 51, 1);
 $dark-red-hide: rgba(204, 51, 51, 0);
 $light-red-hide: rgba(231, 51, 51, 0);
 
+$pagination-active: #fbd3d361;
+$pagination-inactive: #fff0f0;
+$pagination-disabled: #f0f0f0;
+
 $loader-color: rgb(70, 60, 60)
 
