notifications plugin and winners avatars

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,6 +2,7 @@
 @import './scss/variables.scss';
 @import './scss/common.scss';
 @import './scss//normalize.scss';
+@import './scss//global-media.scss';
 
 html, body, #__nuxt, #__layout {
   margin: 0;
